Refresh Left side relize sass style

--- a/index.html
+++ b/index.html
@@ -13,6 +13,76 @@
 		<title>CV</title>
 	</head>
 	<body>
-		Привет
+		<div class="container">
+			<section class="left-side">
+				<div class="about">
+					<div class="ImgBx">
+						<img src="img/Ava_git.jpg" alt="" />
+					</div>
+					<h2>Kvashnin Evgenie <br /><span>Frontend Developer</span></h2>
+				</div>
+				<div class="contact">
+					<div class="contact__title">Contact info</div>
+					<ul class="contact__list-wrap">
+						<li class="contact__list-item">
+							<div class="icon">
+								<svg class="logo" aria-label="logo">
+									<use href="img/sprites.svg#mail"></use>
+								</svg>
+							</div>
+							<h4 class="text">Email<br /><span>eo_kvashnin@bk.ru</span></h4>
+						</li>
+						<li class="contact__list-item">
+							<div class="icon">
+								<svg class="logo" aria-label="logo">
+									<use href="img/sprites.svg#phone"></use>
+								</svg>
+							</div>
+							<h4 class="text">Phone<br /><span>+7 (921) 257-16-33</span></h4>
+						</li>
+						<li class="contact__list-item">
+							<div class="icon">
+								<svg class="logo" aria-label="logo">
+									<use href="img/sprites.svg#globe"></use>
+								</svg>
+							</div>
+							<h4 class="text">
+								Location<br /><span>Cherepovets, Russia</span>
+							</h4>
+						</li>
+					</ul>
+				</div>
+				<div class="education">
+					<div class="education__title">Education</div>
+					<ul class="education__wrap">
+						<li class="education__list-item">
+							<div class="list-item__icon">
+								<svg class="icon__logo" aria-label="logo">
+									<use href="img/sprites.svg#university"></use>
+								</svg>
+							</div>
+							<h4 class="education__text">
+								Vologda technical university<br /><span
+									>Management and informatics in technical systems</span
+								>
+							</h4>
+						</li>
+						<li class="education__list-item">
+							<div class="list-item__icon">
+								<svg class="icon__logo" aria-label="logo">
+									<use href="img/sprites.svg#education"></use>
+								</svg>
+							</div>
+							<h4 class="education__text">
+								Cherepovets Metallurgical College<br /><span>
+									Software for computing equipment and automated systems</span
+								>
+							</h4>
+						</li>
+					</ul>
+				</div>
+			</section>
+			<section class="right-side"></section>
+		</div>
 	</body>
 </html>
