add social link block

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					</div>
 					<h2>Kvashnin Evgenie <br /><span>Frontend Developer</span></h2>
 				</div>
+				<div class="social__link"></div>
 				<div class="contact">
 					<div class="contact__title">Contact info</div>
 					<ul class="contact__list-wrap">
