started right side

--- a/index.html
+++ b/index.html
@@ -19,42 +19,44 @@
 					<div class="ImgBx">
 						<img src="img/Ava_git.jpg" alt="" />
 					</div>
-					<h2>Kvashnin Evgenie <br /><span>Frontend Developer</span></h2>
+					<h2 class="about__title">
+						Kvashnin Evgenie <br /><span>Frontend Developer</span>
+					</h2>
 				</div>
 				<div class="social__link"></div>
 				<div class="contact">
-					<div class="contact__title">Contact info</div>
+					<h3 class="contact__title">Contact info</h3>
 					<ul class="contact__list-wrap">
-						<li class="contact__list-item">
-							<div class="icon">
-								<svg class="logo" aria-label="logo">
+						<li class="contact__list-item item">
+							<div class="item-icon">
+								<svg class="item-icon__logo" aria-label="logo">
 									<use href="img/sprites.svg#mail"></use>
 								</svg>
 							</div>
-							<h4 class="text">Email<br /><span>eo_kvashnin@bk.ru</span></h4>
+							<h4 class="item-text">Email<br /><span>eo_kvashnin@bk.ru</span></h4>
 						</li>
-						<li class="contact__list-item">
-							<div class="icon">
-								<svg class="logo" aria-label="logo">
+						<li class="contact__list-item item">
+							<div class="item-icon">
+								<svg class="item-icon__logo" aria-label="logo">
 									<use href="img/sprites.svg#phone"></use>
 								</svg>
 							</div>
-							<h4 class="text">Phone<br /><span>+7 (921) 257-16-33</span></h4>
+							<h4 class="item-text">Phone<br /><span>+7 (921) 257-16-33</span></h4>
 						</li>
 						<li class="contact__list-item">
-							<div class="icon">
-								<svg class="logo" aria-label="logo">
+							<div class="item-icon">
+								<svg class="item-icon__logo" aria-label="logo">
 									<use href="img/sprites.svg#globe"></use>
 								</svg>
 							</div>
-							<h4 class="text">
+							<h4 class="item-text">
 								Location<br /><span>Cherepovets, Russia</span>
 							</h4>
 						</li>
 					</ul>
 				</div>
 				<div class="education">
-					<div class="education__title">Education</div>
+					<h3 class="education__title">Education</h3>
 					<ul class="education__wrap">
 						<li class="education__list-item">
 							<div class="list-item__icon">
@@ -83,7 +85,40 @@
 					</ul>
 				</div>
 			</section>
-			<section class="right-side"></section>
+			<section class="right-side">
+				<div class="container_right">
+					<div class="profile">
+						<h2 class="profile__title">Profile</h2>
+						<p class="profile__desc">
+							Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure
+							modi vero officia dolorum deleniti eius, optio, veritatis
+							reprehenderit ex voluptas eaque quisquam facere asperiores
+							consectetur?
+						</p>
+					</div>
+					<div class="work_experience work">
+						<h2 class="work__title">Work Experience</h>
+						<div class="work__grid">
+							<div class="work__grid-line line"><span></span></div>
+							<div class="work__wrapper job-1">
+								<h6 class="job__title">AO "Apatit" / <span> Expert</span></h6>
+								<p class="job__date">From 2022 to now</p>
+								<p class="job_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis doloribus magnam reiciendis modi, voluptatem eos sed tempore quaerat porro. Ea, nulla quibusdam minima odit amet animi, quasi consectetur vero eius delectus accusantium doloribus et, perspiciatis obcaecati ipsam aperiam? Tenetur ullam error recusandae enim nemo.</p>
+							</div>
+							<div class="work__wrapper job-2">
+								<h6 class="job__title">AO "Apatit" / <span> Expert</span></h6>
+								<p class="job__date">From 2022 to now</p>
+								<p class="job_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis doloribus magnam reiciendis modi, voluptatem eos sed tempore quaerat porro. Ea, nulla quibusdam minima odit amet animi, quasi consectetur vero eius delectus accusantium doloribus et, perspiciatis obcaecati ipsam aperiam? Tenetur ullam error recusandae enim nemo.</p>
+							</div>
+							<div class="work__wrapper job-3">
+								<h6 class="job__title">AO "Apatit" / <span> Expert</span></h6>
+								<p class="job__date">From 2022 to now</p>
+								<p class="job_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis doloribus magnam reiciendis modi, voluptatem eos sed tempore quaerat porro. Ea, nulla quibusdam minima odit amet animi, quasi consectetur vero eius delectus accusantium doloribus et, perspiciatis obcaecati ipsam aperiam? Tenetur ullam error recusandae enim nemo.</p>
+							</div>
+							
+					</div>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
