--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
 						</li>
 						<li class="contact__list-item">
 							<div class="item-icon">
+								<!-- <svg class="item-icon__logo" aria-label="logo">
+									<use href="img/sprites.svg#tg"></use>
+								</svg> -->
+								<svg class="item-icon__logo" aria-label="logo"><path fill="currentColor" fill-rule="evenodd" d="M18.483 19.79v-.002l.018-.043L21.5 4.625v-.048c0-.377-.14-.706-.442-.903c-.265-.173-.57-.185-.784-.169a2.681 2.681 0 0 0-.586.12a3.23 3.23 0 0 0-.24.088l-.013.005l-16.72 6.559l-.005.002a1.353 1.353 0 0 0-.149.061a2.27 2.27 0 0 0-.341.19c-.215.148-.624.496-.555 1.048c.057.458.372.748.585.899a2.062 2.062 0 0 0 .403.22l.032.014l.01.003l.007.003l2.926.985c-.01.183.008.37.057.555l1.465 5.559a1.5 1.5 0 0 0 2.834.196l2.288-2.446l3.929 3.012l.056.024c.357.156.69.205.995.164c.305-.042.547-.17.729-.315a1.742 1.742 0 0 0 .49-.635l.008-.017l.003-.006zM7.135 13.875a.3.3 0 0 1 .13-.33l9.921-6.3s.584-.355.563 0c0 0 .104.062-.209.353c-.296.277-7.071 6.818-7.757 7.48a.278.278 0 0 0-.077.136L8.6 19.434z" clip-rule="evenodd"/></svg>
+							</div>
+							<h4 class="item-text">
+								Telegram<br /><span>@EOKvashnin</span>
+							</h4>
+						</li>
+						<li class="contact__list-item">
+							<div class="item-icon">
 								<svg class="item-icon__logo" aria-label="logo">
 									<use href="img/sprites.svg#globe"></use>
 								</svg>
@@ -53,6 +64,7 @@
 								Location<br /><span>Cherepovets, Russia</span>
 							</h4>
 						</li>
+						
 					</ul>
 				</div>
 				<div class="education">
@@ -103,7 +115,14 @@
 							<div class="work__wrapper job-1">
 								<h6 class="job__title">AO "Apatit" / <span> Expert</span></h6>
 								<p class="job__date">From 2022 to now</p>
-								<p class="job_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis doloribus magnam reiciendis modi, voluptatem eos sed tempore quaerat porro. Ea, nulla quibusdam minima odit amet animi, quasi consectetur vero eius delectus accusantium doloribus et, perspiciatis obcaecati ipsam aperiam? Tenetur ullam error recusandae enim nemo.</p>
+								<p class="job_desc">Data analysis and process optimization: <br>
+									- Conducting Core HR system audit of the enterprise, identifying bottlenecks and inefficient processes. <br>
+									- Development and implementation of solutions to optimize HR business processes based on analytical findings. <br>	
+
+									Working with databases: <br>
+									- Creating and maintaining a database (PostgreSQL) of custom HR information system functionality.<br>
+									- Writing SQL queries for data extraction, processing and analysis.<br>
+									- Automation of data loading into the database using Python scripts.</p>
 							</div>
 							<div class="work__wrapper job-2">
 								<h6 class="job__title">AO "Apatit" / <span> Expert</span></h6>
