--- a/index.html
+++ b/index.html
@@ -114,20 +114,24 @@
 							<div class="work__grid-line line"><span></span></div>
 							<div class="work__wrapper job-1">
 								<h6 class="job__title">AO "Apatit" / <span> Expert</span></h6>
-								<p class="job__date">From 2022 to now</p>
+								<p class="job__date">From Feb 2022 to now</p>
 								<p class="job_desc">Data analysis and process optimization: <br>
 									- Conducting Core HR system audit of the enterprise, identifying bottlenecks and inefficient processes. <br>
 									- Development and implementation of solutions to optimize HR business processes based on analytical findings. <br>	
-
 									Working with databases: <br>
 									- Creating and maintaining a database (PostgreSQL) of custom HR information system functionality.<br>
 									- Writing SQL queries for data extraction, processing and analysis.<br>
 									- Automation of data loading into the database using Python scripts.</p>
 							</div>
 							<div class="work__wrapper job-2">
-								<h6 class="job__title">AO "Apatit" / <span> Expert</span></h6>
-								<p class="job__date">From 2022 to now</p>
-								<p class="job_desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo debitis doloribus magnam reiciendis modi, voluptatem eos sed tempore quaerat porro. Ea, nulla quibusdam minima odit amet animi, quasi consectetur vero eius delectus accusantium doloribus et, perspiciatis obcaecati ipsam aperiam? Tenetur ullam error recusandae enim nemo.</p>
+								<h6 class="job__title">PAO "Severstal" / <span> Manager</span></h6>
+								<p class="job__date">From 2019 to 2022</p>
+								<p class="job_desc">
+									- Analyzing production data to identify key trends, problems, and prepare reports for management. Development of proposals for process optimization and efficiency improvement.<br>
+									- Creation and implementation of analytical dashboards (Power BI, Excel) for monitoring critical production metrics.<br>
+									- Working with big data from various sources (CRM, ERP, production systems): analysis, identification of patterns, calculation of economic efficiency and investment attractiveness of projects.<br>
+									- Automation of data collection and processing processes using Python, testing video recognition models for analyzing production operations.<br>
+									- Introducing innovations: digital assistants for steel casting and VR solutions for staff training, which increased the accuracy of processes and reduced training time.</p>
 							</div>
 							<div class="work__wrapper job-3">
 								<h6 class="job__title">AO "Apatit" / <span> Expert</span></h6>
