--- a/index.html
+++ b/index.html
@@ -38,17 +38,16 @@
 						<li class="contact__list-item item">
 							<div class="item-icon">
 								<svg class="item-icon__logo" aria-label="logo">
-									<use href="img/sprites.svg#phone"></use>
+									<use href="img/sprite.svg#phone"></use>
 								</svg>
 							</div>
 							<h4 class="item-text">Phone<br /><span>+7 (921) 257-16-33</span></h4>
 						</li>
 						<li class="contact__list-item">
 							<div class="item-icon">
-								<!-- <svg class="item-icon__logo" aria-label="logo">
-									<use href="img/sprites.svg#tg"></use>
-								</svg> -->
-								<svg class="item-icon__logo" aria-label="logo"><path fill="currentColor" fill-rule="evenodd" d="M18.483 19.79v-.002l.018-.043L21.5 4.625v-.048c0-.377-.14-.706-.442-.903c-.265-.173-.57-.185-.784-.169a2.681 2.681 0 0 0-.586.12a3.23 3.23 0 0 0-.24.088l-.013.005l-16.72 6.559l-.005.002a1.353 1.353 0 0 0-.149.061a2.27 2.27 0 0 0-.341.19c-.215.148-.624.496-.555 1.048c.057.458.372.748.585.899a2.062 2.062 0 0 0 .403.22l.032.014l.01.003l.007.003l2.926.985c-.01.183.008.37.057.555l1.465 5.559a1.5 1.5 0 0 0 2.834.196l2.288-2.446l3.929 3.012l.056.024c.357.156.69.205.995.164c.305-.042.547-.17.729-.315a1.742 1.742 0 0 0 .49-.635l.008-.017l.003-.006zM7.135 13.875a.3.3 0 0 1 .13-.33l9.921-6.3s.584-.355.563 0c0 0 .104.062-.209.353c-.296.277-7.071 6.818-7.757 7.48a.278.278 0 0 0-.077.136L8.6 19.434z" clip-rule="evenodd"/></svg>
+								<svg class="item-icon__logo" aria-label="logo">
+									<use href="img/sprite.svg#tg"></use>
+								</svg>
 							</div>
 							<h4 class="item-text">
 								Telegram<br /><span>@EOKvashnin</span>
@@ -57,7 +56,7 @@
 						<li class="contact__list-item">
 							<div class="item-icon">
 								<svg class="item-icon__logo" aria-label="logo">
-									<use href="img/sprites.svg#globe"></use>
+									<use href="img/sprite.svg#globe"></use>
 								</svg>
 							</div>
 							<h4 class="item-text">
@@ -73,7 +72,7 @@
 						<li class="education__list-item">
 							<div class="list-item__icon">
 								<svg class="icon__logo" aria-label="logo">
-									<use href="img/sprites.svg#university"></use>
+									<use href="img/sprite.svg#university"></use>
 								</svg>
 							</div>
 							<h4 class="education__text">
@@ -85,7 +84,7 @@
 						<li class="education__list-item">
 							<div class="list-item__icon">
 								<svg class="icon__logo" aria-label="logo">
-									<use href="img/sprites.svg#education"></use>
+									<use href="img/sprite.svg#education"></use>
 								</svg>
 							</div>
 							<h4 class="education__text">
