Проработал левую панель, добавил hover

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 									<use href="img/sprite.svg#university"></use>
 								</svg>
 							</div>
-							<p class="education__text">
-								Вологодский государственный технический университет<br /><span
-									>Управление и информатика в автоматизированных системах</span
-								>
+							<div class="education__text">
+							<p>	Вологодский государственный технический университет<br /><span
+									>Управление и информатика в автоматизированных системах</span>
 							</p>
+							</div>
 							
 						</li>
 						<li class="education__list-item">
@@ -84,12 +84,11 @@
 									<use href="img/sprite.svg#education"></use>
 								</svg>
 							</div>
-							<p class="education__text">
-								Череповецкий металлургический колледж<br />
-								<span>Программное обеспечение для вычислительной техники и автоматизированных систем
-									</span
-								>
+							<div class="education__text">
+							<p>Череповецкий металлургический колледж<br />
+								<span>Программное обеспечение для вычислительной техники и автоматизированных систем</span>		
 							</p>
+							</div>
 						</li>
 					</ul>
 				</div>
