Завершил левую сторону

--- a/index.html
+++ b/index.html
@@ -96,66 +96,35 @@
 					<h3 class="hobby__title">ХОББИ</h3>
 					<div class="hobby__list">
 						<div class="hobby__list-item">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="32"
-								height="32"
-								viewBox="0 0 24 24"
-							>
-								<path
-									fill="#67b4f2"
-									d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8z"
-								/>
-							</svg>
+							<div class="hobby__list-item-icon"> 
+								<svg class="hobby__icon-logo" aria-label="logo"> 
+									<use href="img/sprite_hobbi.svg#code"></use>
+								</svg>
+							</div>
 							<p>Программирование</p>
 						</div>
 						<div class="hobby__list-item">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="32"
-								height="32"
-								viewBox="0 0 24 24"
-							>
-								<g
-									fill="none"
-									stroke="#67b4f2"
-									stroke-linecap="round"
-									stroke-linejoin="round"
-									stroke-width="1.5"
-								>
-									<circle cx="4" cy="12" r="2.25" />
-									<circle cx="12" cy="11" r="2.25" />
-									<path d="M6.25 12V2.75l8-1V11" />
-								</g>
-							</svg>
+							<div class="hobby__list-item-icon"> 
+								<svg class="hobby__icon-logo" aria-label="logo"> 
+									<use href="img/sprite_hobbi.svg#sound"></use>
+								</svg>
+							</div>
 							<p>Автозвук</p>
 						</div>
 						<div class="hobby__list-item">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="32"
-								height="32"
-								viewBox="0 0 512 512"
-							>
-								<path
-									fill="#67b4f2"
-									d="M215.344 22.813L205.03 37.906l71.782 46.375l8.938-12.81c-15.62-23.633-44.153-40.97-70.406-48.657zm-38.47 18.843c-28.32 35.34-79.16 105.16-105.718 145.313c61.96 26.364 113.013 69.562 133.22 119.593c5.064 12.54 8.125 25.566 8.78 38.75c36.873-9.75 80.34-36.93 117.25-70.5c30.105-27.38 55.912-59.115 71.406-87.75L176.875 41.655zm240.657 155.53c-16.836 31.038-43.713 63.084-74.717 91.283c-40.21 36.57-87.238 66.474-130.47 76.03a105.8 105.8 0 0 1-6.343 24.72c-8.91 22.832-26.23 44.633-52.656 64.592c64.678 10.955 135.135-13.105 195.844-53.687c64.21-42.923 116.84-104.112 139.28-157.063l-70.937-45.875zM84.814 213.782L16.5 313.72v143.717l135.875-194.812c-18.23-18.513-41.412-35.295-67.563-48.844z"
-								/>
-							</svg>
+							<div class="hobby__list-item-icon"> 
+								<svg class="hobby__icon-logo" aria-label="logo"> 
+									<use href="img/sprite_hobbi.svg#saw"></use>
+								</svg>
+							</div>
 							<p>Работа по дереву</p>
 						</div>
 						<div class="hobby__list-item">
-							<svg
-								xmlns="http://www.w3.org/2000/svg"
-								width="32"
-								height="32"
-								viewBox="0 0 24 24"
-							>
-								<path
-									fill="#67b4f2"
-									d="m20.274 9.869l-3.442-4.915l1.639-1.147l3.441 4.915zm-1.884 2.54L16.67 9.95l-8.192 5.736l1.72 2.457l-1.638 1.148l-4.588-6.554L5.61 11.59l1.72 2.458l8.192-5.736l-1.72-2.458l1.638-1.147l4.588 6.554zm2.375-5.326l1.638-1.147l-1.147-1.638l-1.638 1.147zM7.168 19.046l-3.442-4.915l-1.638 1.147l3.441 4.915zm-2.786-.491l-1.638 1.147l-1.147-1.638l1.638-1.147z"
-								/>
-							</svg>
+							<div class="hobby__list-item-icon"> 
+								<svg class="hobby__icon-logo" aria-label="logo"> 
+									<use href="img/sprite_hobbi.svg#gym"></use>
+								</svg>
+							</div>
 							<p>Тренажерный зал</p>
 						</div>
 					</div>
