--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 					<div class="profile">
 						<h2 class="profile__title">Обо мне</h2>
 						<div class="profile__header">
-							<h4>Frontend-разработчик с сильным бэкграундом в анализе данных и создании пользовательских интерфейсов.</h4>
+							<h4>Frontend-разработчик с сильным бэкграундом в анализе данных <br> и создании пользовательских интерфейсов.</h4>
 						</div>
 						<p class="profile__desc">
 							
@@ -146,8 +146,8 @@
 							<p style="text-indent: 1.5em;">Мои сильные стороны: быстрая обучаемость, аналитическое мышление, понимание полного цикла разработки продукта и страсть к созданию удобных интерфейсов.</p>
 						</p>
 					</div>
-					<div class="work_experience work">
-						<h2 class="work__title">Опыт работы</h>
+					<div class="work">
+						<h2 class="work__title">Опыт работы</h2>
 						<div class="work__grid">
 							<div class="work__grid-line line"></div>
 							<div class="work__wrapper job">
@@ -257,13 +257,38 @@
 							</li>
 													
 					</ul>
-						<h4>Инструменты и сопутствующие навыки</h4>
-						<ul class="skills__desc">
-							<li><strong>Бэкенд для фронтенда:</strong> REST API, SQL (PostgreSQL), ETL</li>
-							<li><strong>Дизайн и прототипирование:</strong> Разработка UI-прототипов, Figma, MS Power Point</li>
-							<li><strong>Продуктивность:</strong> Jira, Confluence, опыт работы в Scrum-командах.</li>
+					<h4>Инструменты и сопутствующие навыки:</h4>
+						<ul class="skills-other__list">
+							<li class="skills-other__list-item">
+								<div class="skills-other__list-item-logo">
+									<div class="skills-other__list-item-logo-icons">
+										<svg class="skills-other__list-item-logo-icons-svg" aria-label="logo">
+										<use href="img/skills_sprites.svg#api"></use>
+										</svg>
+										<svg class="skills-other__list-item-logo-icons-svg" id="css3" aria-label="logo">
+											<use href="img/skills_sprites.svg#psql"></use>
+										</svg>
+										<svg class="skills-other__list-item-logo-icons-svg" id="css3" aria-label="logo">
+											<use href="img/skills_sprites.svg#db"></use>
+										</svg> 
+										<svg class="skills-other__list-item-logo-icons-svg" id="css3" aria-label="logo">
+											<use href="img/skills_sprites.svg#figma"></use>
+										</svg>
+										<svg class="skills-other__list-item-logo-icons-svg" id="css3" aria-label="logo">
+											<use href="img/skills_sprites.svg#point"></use>
+										</svg>
+										<svg class="skills-other__list-item-logo-icons-svg" id="css3" aria-label="logo">
+											<use href="img/skills_sprites.svg#jira"></use>
+										</svg>
+									</div>
+								</div>
+								<div class="skills-other__list-item-desc">
+									<strong>Бэкенд для фронтенда:</strong>REST API, SQL (PostgreSQL), ETL <br>
+									<strong>Дизайн и прототипирование:</strong>: Разработка UI-прототипов, Figma, MS Power Point <br>
+									<strong>Продуктивность:</strong>Jira, Confluence, опыт работы в Scrum-командах.<br>
+								</div>							
+							</li>						
 						</ul>
-
 					</div>
 			</section>
 
