scroll - behavior: smooth, изменил иконку java

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 							<li class="skills__list-item">
 								<div class="skills__list-item-logo">
 									<svg class="skills__list-item-logo-svg" id="js" aria-label="logo">
-									<use href="img/skills_sprites.svg#js"></use>
+									<use href="img/skills_sprites.svg#java"></use>
 									</svg>
 									
 								</div>
