--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<section class="left-side">
 				<div class="about">
 					<div class="ImgBx">
-						<img src="img/Ava_git.jpg" alt="" />
+						<img src="img/ava_2.png" alt="" />
 					</div>
 					<h2 class="about__title">
 						Квашнин Евгений <br /><span>Frontend Разработчик
@@ -22,7 +22,7 @@
 						</span>
 					</h2>
 				</div>
-				<div class="social__link"></div>
+				
 				<div class="contact">
 					<h3 class="contact__title">Контакты</h3>
 					<ul class="contact__list-wrap">
@@ -42,7 +42,7 @@
 							</div>
 							<p>+7 (921) 257-16-33</p>
 						</li>
-						<li class="contact__list-item">
+						<li class="contact__list-item item">
 							<div class="item-icon">
 								<svg class="item-icon__logo" aria-label="logo">
 									<use href="img/sprite.svg#tg"></use>
@@ -50,7 +50,7 @@
 							</div>
 							<p>@EOKvashnin</p>
 						</li>
-						<li class="contact__list-item">
+						<li class="contact__list-item item ">
 							<div class="item-icon">
 								<svg class="item-icon__logo" aria-label="logo">
 									<use href="img/sprite.svg#globe"></use>
