--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 									
 								</div>
 								<div class="skills__list-item-desc">
-									<strong>Vue.js</strong>: Активное изучение и применение в текущих задачах. (Vue 2/3, Composition API, Vuex/Pinia)..<br>
+									<strong>Vue.js</strong>: Активное изучение и в текущий момент. (Vue 3, Composition API, Vuex, Vue router)<br>
 									
 								</div>							
 							</li>
