--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 									<use href="img/sprite.svg#mail"></use>
 								</svg>
 							</div>
-							<a href="mailto:eo_kvashnin@bk.ru" class="item-icon__telephone"
+							<a href="mailto:eo_kvashnin@bk.ru" class="item-icon__contact"
 					>eo_kvashnin@bk.ru</a
 				>
 							<!-- <p>eo_kvashnin@bk.ru</p> -->
@@ -43,7 +43,7 @@
 									<use href="img/sprite.svg#phone"></use>
 								</svg>
 							</div>
-							<a href="tel:+79212571633" class="item-icon__telephone">+79212571633</a>
+							<a href="tel:+79212571633" class="item-icon__contact">+79212571633</a>
 							<!-- <p>+7 (921) 257-16-33</p> -->
 						</li>
 						<li class="contact__list-item item">
