--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 									</svg>
 								</div>
 								<div class="skills__list-item-desc">
-									<strong>HTML5 / CSS3</strong>: Семантическая верстка, адаптивная и кроссбраузерная верстка. Глубокое понимание HTML5 и CSS3, включая Flexbox, Grid и mobile-first подход <br>
+									<strong>HTML5 / CSS3</strong>: Семантическая и адаптивная верстка. Глубокое понимание HTML5 и CSS3, включая Flexbox, Grid и mobile-first подход <br>
 									<button class="btn"><a href="https://eokvashnin.github.io/Aivazovski" class="btn__link" target="_blank">Ayvazovskiy_IC</a></button>
 									<button class="btn"><a href="https://eokvashnin.github.io/landing_live_streaming/" class="btn__link" target="_blank">landing_live_streaming</a></button>
 																							
