Уменьшил размер картинок для ускорения загрузки

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="dist/index.css" />
+		<link rel="icon" href="img/Check.png" type="image">
 		<title>CV</title>
 	</head>
 	<body>
@@ -14,7 +15,7 @@
 			<section class="left-side">
 				<div class="about">
 					<div class="ImgBx">
-						<img src="img/ava_2.png" alt="" />
+						<img src="img/ava_2.webp" alt="" />
 					</div>
 					<h2 class="about__title">
 						Квашнин Евгений <br /><span>Frontend Разработчик
